tests/baselines/reference/comparisonOperatorWithIdenticalPrimitiveType(strict=true).errors.txt
comparisonOperatorWithIdenticalPrimitiveType.ts(10,11): error TS2454: Variable 'a' is used before being assigned.
comparisonOperatorWithIdenticalPrimitiveType.ts(10,15): error TS2454: Variable 'a' is used before being assigned.
comparisonOperatorWithIdenticalPrimitiveType.ts(11,11): error TS2454: Variable 'b' is used before being assigned.
comparisonOperatorWithIdenticalPrimitiveType.ts(11,15): error TS2454: Variable 'b' is used before being assigned.
comparisonOperatorWithIdenticalPrimitiveType.ts(12,11): error TS2454: Variable 'c' is used before being assigned.
comparisonOperatorWithIdenticalPrimitiveType.ts(12,15): error TS2454: Variable 'c' is used before being assigned.
comparisonOperatorWithIdenticalPrimitiveType.ts(14,11): error TS2454: Variable 'e' is used before being assigned.
comparisonOperatorWithIdenticalPrimitiveType.ts(14,15): error TS2454: Variable 'e' is used before being assigned.
comparisonOperatorWithIdenticalPrimitiveType.ts(15,11): error TS18050: The value 'null' cannot be used here.
comparisonOperatorWithIdenticalPrimitiveType.ts(15,18): error TS18050: The value 'null' cannot be used here.
comparisonOperatorWithIdenticalPrimitiveType.ts(16,11): error TS18050: The value 'undefined' cannot be used here.
comparisonOperatorWithIdenticalPrimitiveType.ts(16,23): error TS18050: The value 'undefined' cannot be used here.
comparisonOperatorWithIdenticalPrimitiveType.ts(19,11): error TS2454: Variable 'a' is used before being assigned.
comparisonOperatorWithIdenticalPrimitiveType.ts(19,15): error TS2454: Variable 'a' is used before being assigned.
comparisonOperatorWithIdenticalPrimitiveType.ts(20,11): error TS2454: Variable 'b' is used before being assigned.
comparisonOperatorWithIdenticalPrimitiveType.ts(20,15): error TS2454: Variable 'b' is used before being assigned.
comparisonOperatorWithIdenticalPrimitiveType.ts(21,11): error TS2454: Variable 'c' is used before being assigned.
comparisonOperatorWithIdenticalPrimitiveType.ts(21,15): error TS2454: Variable 'c' is used before being assigned.
comparisonOperatorWithIdenticalPrimitiveType.ts(23,11): error TS2454: Variable 'e' is used before being assigned.
comparisonOperatorWithIdenticalPrimitiveType.ts(23,15): error TS2454: Variable 'e' is used before being assigned.
comparisonOperatorWithIdenticalPrimitiveType.ts(24,11): error TS18050: The value 'null' cannot be used here.
comparisonOperatorWithIdenticalPrimitiveType.ts(24,18): error TS18050: The value 'null' cannot be used here.
comparisonOperatorWithIdenticalPrimitiveType.ts(25,11): error TS18050: The value 'undefined' cannot be used here.
comparisonOperatorWithIdenticalPrimitiveType.ts(25,23): error TS18050: The value 'undefined' cannot be used here.
comparisonOperatorWithIdenticalPrimitiveType.ts(28,11): error TS2454: Variable 'a' is used before being assigned.
comparisonOperatorWithIdenticalPrimitiveType.ts(28,16): error TS2454: Variable 'a' is used before being assigned.
comparisonOperatorWithIdenticalPrimitiveType.ts(29,11): error TS2454: Variable 'b' is used before being assigned.
comparisonOperatorWithIdenticalPrimitiveType.ts(29,16): error TS2454: Variable 'b' is used before being assigned.
comparisonOperatorWithIdenticalPrimitiveType.ts(30,11): error TS2454: Variable 'c' is used before being assigned.
comparisonOperatorWithIdenticalPrimitiveType.ts(30,16): error TS2454: Variable 'c' is used before being assigned.
comparisonOperatorWithIdenticalPrimitiveType.ts(32,11): error TS2454: Variable 'e' is used before being assigned.
comparisonOperatorWithIdenticalPrimitiveType.ts(32,16): error TS2454: Variable 'e' is used before being assigned.
comparisonOperatorWithIdenticalPrimitiveType.ts(33,11): error TS18050: The value 'null' cannot be used here.
comparisonOperatorWithIdenticalPrimitiveType.ts(33,19): error TS18050: The value 'null' cannot be used here.
comparisonOperatorWithIdenticalPrimitiveType.ts(34,11): error TS18050: The value 'undefined' cannot be used here.
comparisonOperatorWithIdenticalPrimitiveType.ts(34,24): error TS18050: The value 'undefined' cannot be used here.
comparisonOperatorWithIdenticalPrimitiveType.ts(37,11): error TS2454: Variable 'a' is used before being assigned.
comparisonOperatorWithIdenticalPrimitiveType.ts(37,16): error TS2454: Variable 'a' is used before being assigned.
comparisonOperatorWithIdenticalPrimitiveType.ts(38,11): error TS2454: Variable 'b' is used before being assigned.
comparisonOperatorWithIdenticalPrimitiveType.ts(38,16): error TS2454: Variable 'b' is used before being assigned.
comparisonOperatorWithIdenticalPrimitiveType.ts(39,11): error TS2454: Variable 'c' is used before being assigned.
comparisonOperatorWithIdenticalPrimitiveType.ts(39,16): error TS2454: Variable 'c' is used before being assigned.
comparisonOperatorWithIdenticalPrimitiveType.ts(41,11): error TS2454: Variable 'e' is used before being assigned.
comparisonOperatorWithIdenticalPrimitiveType.ts(41,16): error TS2454: Variable 'e' is used before being assigned.
comparisonOperatorWithIdenticalPrimitiveType.ts(42,11): error TS18050: The value 'null' cannot be used here.
comparisonOperatorWithIdenticalPrimitiveType.ts(42,19): error TS18050: The value 'null' cannot be used here.
comparisonOperatorWithIdenticalPrimitiveType.ts(43,11): error TS18050: The value 'undefined' cannot be used here.
comparisonOperatorWithIdenticalPrimitiveType.ts(43,24): error TS18050: The value 'undefined' cannot be used here.
comparisonOperatorWithIdenticalPrimitiveType.ts(46,11): error TS2454: Variable 'a' is used before being assigned.
comparisonOperatorWithIdenticalPrimitiveType.ts(46,16): error TS2454: Variable 'a' is used before being assigned.
comparisonOperatorWithIdenticalPrimitiveType.ts(47,11): error TS2454: Variable 'b' is used before being assigned.
comparisonOperatorWithIdenticalPrimitiveType.ts(47,16): error TS2454: Variable 'b' is used before being assigned.
comparisonOperatorWithIdenticalPrimitiveType.ts(48,11): error TS2454: Variable 'c' is used before being assigned.
comparisonOperatorWithIdenticalPrimitiveType.ts(48,16): error TS2454: Variable 'c' is used before being assigned.
comparisonOperatorWithIdenticalPrimitiveType.ts(50,11): error TS2454: Variable 'e' is used before being assigned.
comparisonOperatorWithIdenticalPrimitiveType.ts(50,16): error TS2454: Variable 'e' is used before being assigned.
comparisonOperatorWithIdenticalPrimitiveType.ts(55,11): error TS2454: Variable 'a' is used before being assigned.
comparisonOperatorWithIdenticalPrimitiveType.ts(55,16): error TS2454: Variable 'a' is used before being assigned.
comparisonOperatorWithIdenticalPrimitiveType.ts(56,11): error TS2454: Variable 'b' is used before being assigned.
comparisonOperatorWithIdenticalPrimitiveType.ts(56,16): error TS2454: Variable 'b' is used before being assigned.
comparisonOperatorWithIdenticalPrimitiveType.ts(57,11): error TS2454: Variable 'c' is used before being assigned.
comparisonOperatorWithIdenticalPrimitiveType.ts(57,16): error TS2454: Variable 'c' is used before being assigned.
comparisonOperatorWithIdenticalPrimitiveType.ts(59,11): error TS2454: Variable 'e' is used before being assigned.
comparisonOperatorWithIdenticalPrimitiveType.ts(59,16): error TS2454: Variable 'e' is used before being assigned.
comparisonOperatorWithIdenticalPrimitiveType.ts(64,11): error TS2454: Variable 'a' is used before being assigned.
comparisonOperatorWithIdenticalPrimitiveType.ts(64,17): error TS2454: Variable 'a' is used before being assigned.
comparisonOperatorWithIdenticalPrimitiveType.ts(65,11): error TS2454: Variable 'b' is used before being assigned.
comparisonOperatorWithIdenticalPrimitiveType.ts(65,17): error TS2454: Variable 'b' is used before being assigned.
comparisonOperatorWithIdenticalPrimitiveType.ts(66,11): error TS2454: Variable 'c' is used before being assigned.
comparisonOperatorWithIdenticalPrimitiveType.ts(66,17): error TS2454: Variable 'c' is used before being assigned.
comparisonOperatorWithIdenticalPrimitiveType.ts(68,11): error TS2454: Variable 'e' is used before being assigned.
comparisonOperatorWithIdenticalPrimitiveType.ts(68,17): error TS2454: Variable 'e' is used before being assigned.
comparisonOperatorWithIdenticalPrimitiveType.ts(73,11): error TS2454: Variable 'a' is used before being assigned.
comparisonOperatorWithIdenticalPrimitiveType.ts(73,17): error TS2454: Variable 'a' is used before being assigned.
comparisonOperatorWithIdenticalPrimitiveType.ts(74,11): error TS2454: Variable 'b' is used before being assigned.
comparisonOperatorWithIdenticalPrimitiveType.ts(74,17): error TS2454: Variable 'b' is used before being assigned.
comparisonOperatorWithIdenticalPrimitiveType.ts(75,11): error TS2454: Variable 'c' is used before being assigned.
comparisonOperatorWithIdenticalPrimitiveType.ts(75,17): error TS2454: Variable 'c' is used before being assigned.
comparisonOperatorWithIdenticalPrimitiveType.ts(77,11): error TS2454: Variable 'e' is used before being assigned.
comparisonOperatorWithIdenticalPrimitiveType.ts(77,17): error TS2454: Variable 'e' is used before being assigned.


==== comparisonOperatorWithIdenticalPrimitiveType.ts (80 errors) ====
    enum E { a, b, c }
    
    var a: number;
    var b: boolean;
    var c: string;
    var d: void;
    var e: E;
    
    // operator <
    var ra1 = a < a;
              ~
!!! error TS2454: Variable 'a' is used before being assigned.
                  ~
!!! error TS2454: Variable 'a' is used before being assigned.
    var ra2 = b < b;
              ~
!!! error TS2454: Variable 'b' is used before being assigned.
                  ~
!!! error TS2454: Variable 'b' is used before being assigned.
    var ra3 = c < c;
              ~
!!! error TS2454: Variable 'c' is used before being assigned.
                  ~
!!! error TS2454: Variable 'c' is used before being assigned.
    var ra4 = d < d;
    var ra5 = e < e;
              ~
!!! error TS2454: Variable 'e' is used before being assigned.
                  ~
!!! error TS2454: Variable 'e' is used before being assigned.
    var ra6 = null < null;
              ~~~~
!!! error TS18050: The value 'null' cannot be used here.
                     ~~~~
!!! error TS18050: The value 'null' cannot be used here.
    var ra7 = undefined < undefined;
              ~~~~~~~~~
!!! error TS18050: The value 'undefined' cannot be used here.
                          ~~~~~~~~~
!!! error TS18050: The value 'undefined' cannot be used here.
    
    // operator >
    var rb1 = a > a;
              ~
!!! error TS2454: Variable 'a' is used before being assigned.
                  ~
!!! error TS2454: Variable 'a' is used before being assigned.
    var rb2 = b > b;
              ~
!!! error TS2454: Variable 'b' is used before being assigned.
                  ~
!!! error TS2454: Variable 'b' is used before being assigned.
    var rb3 = c > c;
              ~
!!! error TS2454: Variable 'c' is used before being assigned.
                  ~
!!! error TS2454: Variable 'c' is used before being assigned.
    var rb4 = d > d;
    var rb5 = e > e;
              ~
!!! error TS2454: Variable 'e' is used before being assigned.
                  ~
!!! error TS2454: Variable 'e' is used before being assigned.
    var rb6 = null > null;
              ~~~~
!!! error TS18050: The value 'null' cannot be used here.
                     ~~~~
!!! error TS18050: The value 'null' cannot be used here.
    var rb7 = undefined > undefined;
              ~~~~~~~~~
!!! error TS18050: The value 'undefined' cannot be used here.
                          ~~~~~~~~~
!!! error TS18050: The value 'undefined' cannot be used here.
    
    // operator <=
    var rc1 = a <= a;
              ~
!!! error TS2454: Variable 'a' is used before being assigned.
                   ~
!!! error TS2454: Variable 'a' is used before being assigned.
    var rc2 = b <= b;
              ~
!!! error TS2454: Variable 'b' is used before being assigned.
                   ~
!!! error TS2454: Variable 'b' is used before being assigned.
    var rc3 = c <= c;
              ~
!!! error TS2454: Variable 'c' is used before being assigned.
                   ~
!!! error TS2454: Variable 'c' is used before being assigned.
    var rc4 = d <= d;
    var rc5 = e <= e;
              ~
!!! error TS2454: Variable 'e' is used before being assigned.
                   ~
!!! error TS2454: Variable 'e' is used before being assigned.
    var rc6 = null <= null;
              ~~~~
!!! error TS18050: The value 'null' cannot be used here.
                      ~~~~
!!! error TS18050: The value 'null' cannot be used here.
    var rc7 = undefined <= undefined;
              ~~~~~~~~~
!!! error TS18050: The value 'undefined' cannot be used here.
                           ~~~~~~~~~
!!! error TS18050: The value 'undefined' cannot be used here.
    
    // operator >=
    var rd1 = a >= a;
              ~
!!! error TS2454: Variable 'a' is used before being assigned.
                   ~
!!! error TS2454: Variable 'a' is used before being assigned.
    var rd2 = b >= b;
              ~
!!! error TS2454: Variable 'b' is used before being assigned.
                   ~
!!! error TS2454: Variable 'b' is used before being assigned.
    var rd3 = c >= c;
              ~
!!! error TS2454: Variable 'c' is used before being assigned.
                   ~
!!! error TS2454: Variable 'c' is used before being assigned.
    var rd4 = d >= d;
    var rd5 = e >= e;
              ~
!!! error TS2454: Variable 'e' is used before being assigned.
                   ~
!!! error TS2454: Variable 'e' is used before being assigned.
    var rd6 = null >= null;
              ~~~~
!!! error TS18050: The value 'null' cannot be used here.
                      ~~~~
!!! error TS18050: The value 'null' cannot be used here.
    var rd7 = undefined >= undefined;
              ~~~~~~~~~
!!! error TS18050: The value 'undefined' cannot be used here.
                           ~~~~~~~~~
!!! error TS18050: The value 'undefined' cannot be used here.
    
    // operator ==
    var re1 = a == a;
              ~
!!! error TS2454: Variable 'a' is used before being assigned.
                   ~
!!! error TS2454: Variable 'a' is used before being assigned.
    var re2 = b == b;
              ~
!!! error TS2454: Variable 'b' is used before being assigned.
                   ~
!!! error TS2454: Variable 'b' is used before being assigned.
    var re3 = c == c;
              ~
!!! error TS2454: Variable 'c' is used before being assigned.
                   ~
!!! error TS2454: Variable 'c' is used before being assigned.
    var re4 = d == d;
    var re5 = e == e;
              ~
!!! error TS2454: Variable 'e' is used before being assigned.
                   ~
!!! error TS2454: Variable 'e' is used before being assigned.
    var re6 = null == null;
    var re7 = undefined == undefined;
    
    // operator !=
    var rf1 = a != a;
              ~
!!! error TS2454: Variable 'a' is used before being assigned.
                   ~
!!! error TS2454: Variable 'a' is used before being assigned.
    var rf2 = b != b;
              ~
!!! error TS2454: Variable 'b' is used before being assigned.
                   ~
!!! error TS2454: Variable 'b' is used before being assigned.
    var rf3 = c != c;
              ~
!!! error TS2454: Variable 'c' is used before being assigned.
                   ~
!!! error TS2454: Variable 'c' is used before being assigned.
    var rf4 = d != d;
    var rf5 = e != e;
              ~
!!! error TS2454: Variable 'e' is used before being assigned.
                   ~
!!! error TS2454: Variable 'e' is used before being assigned.
    var rf6 = null != null;
    var rf7 = undefined != undefined;
    
    // operator ===
    var rg1 = a === a;
              ~
!!! error TS2454: Variable 'a' is used before being assigned.
                    ~
!!! error TS2454: Variable 'a' is used before being assigned.
    var rg2 = b === b;
              ~
!!! error TS2454: Variable 'b' is used before being assigned.
                    ~
!!! error TS2454: Variable 'b' is used before being assigned.
    var rg3 = c === c;
              ~
!!! error TS2454: Variable 'c' is used before being assigned.
                    ~
!!! error TS2454: Variable 'c' is used before being assigned.
    var rg4 = d === d;
    var rg5 = e === e;
              ~
!!! error TS2454: Variable 'e' is used before being assigned.
                    ~
!!! error TS2454: Variable 'e' is used before being assigned.
    var rg6 = null === null;
    var rg7 = undefined === undefined;
    
    // operator !==
    var rh1 = a !== a;
              ~
!!! error TS2454: Variable 'a' is used before being assigned.
                    ~
!!! error TS2454: Variable 'a' is used before being assigned.
    var rh2 = b !== b;
              ~
!!! error TS2454: Variable 'b' is used before being assigned.
                    ~
!!! error TS2454: Variable 'b' is used before being assigned.
    var rh3 = c !== c;
              ~
!!! error TS2454: Variable 'c' is used before being assigned.
                    ~
!!! error TS2454: Variable 'c' is used before being assigned.
    var rh4 = d !== d;
    var rh5 = e !== e;
              ~
!!! error TS2454: Variable 'e' is used before being assigned.
                    ~
!!! error TS2454: Variable 'e' is used before being assigned.
    var rh6 = null !== null;
    var rh7 = undefined !== undefined;